Add header animation Update index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@ https://templatemo.com/tm-527-sided
               <div class="tm-site-name-container">
                 <div class="tm-site-name-container-inner">
                   <h1 class="text-uppercase tm-text-primary tm-site-name">
+                    <div class="scale-in-center">
                     BSCSIT 1102l
+                    </div>
                   </h1>
                   <p class="tm-text-primary tm-site-description">
                     Introduction to Computing
