Text Update index.html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ https://templatemo.com/tm-527-sided
                 <div class="tm-text-gray">
                   <p class="mb-0">
                     <p>
-                      Computing is something that touches us in almost every aspect of our lives and has a history that dates back long before we had smartphones and the internet. To understand how far we have come with our current technology, let us look back and see how it all started, as knowing the earlier stages of how things work can help anyone become more comfortable and accustomed to our technology driven world.
+                      Computing is something that touches us in almost every aspect of our lives and has a history that dates back long before we had smartphones and the internet. To understand how far we have come, we should look back and appreciate how certain figures catalyzed this progress. Knowing the earlier stages of computing can help us appreciate the innovations passed down through generations for the betterment of humankind.
                   </p>
                   <p>
                       The story of computing is a long one, full of brilliant ideas and people who were ahead of their time. One of the earliest tools that was used by humans to help with computation is the abacus. An ancient device which looks like a simple rectangular flat box with beads was used to perform mathematical operations like addition and subtraction. It may look basic but the abacus was a huge leap for humans to efficiently manage numbers.
